--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,9 @@ keywords = ["midi", "audio", "synthesizer"]
 categories = ["multimedia::audio", "multimedia"]
 license = "MIT OR Apache-2.0"
 
+
+[features]
+tracing = ["dep:tracing"]
+
 [dependencies]
+tracing = {version = "0.1", optional = true }
