add requisite files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ license = "MIT OR Apache-2.0"
 tracing = ["dep:tracing"]
 
 [dependencies]
+midix = { version = "4.0.0-alpha" }
+bevy_platform = { version = "0.17.0-rc" }
 tracing = {version = "0.1", optional = true }
