--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ tracing = ["dep:tracing"]
 midix = { version = "4.0.0-alpha" }
 bevy_platform = { version = "0.17.0-rc" }
 tracing = {version = "0.1", optional = true }
+
+[dev-dependencies]
+rustysynth = "1.3.6"
